@@ -5,6 +5,9 @@ CHANGES WITH 235:
 	* Adapt the rename of systemd-activate to systemd-socket-activate
 	  performed in systemd 230
 
+	* Support for the new sd_listen_fds_with_names added in systemd 227
+	  is added.
+
 CHANGES WITH 234:
 
         * Support for the new sd_is_socket_sockaddr added in systemd 233
